# MuziekBingo

./: .gitignore  LICENSE.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: master_HeyendaalBingo.yml
azure/: startup.sh
bingo/: asgi.py  settings.py  urls.py  wsgi.py
game/: admin.py  emails.py  forms.py  models.py  urls.py  views.py
game/management/commands/: send_welcome_email.py
game/migrations/: 0001_initial.py  0002_auto_20210305_2025.py  0003_auto_20210305_2028.py
game/static/css/: main.scss
game/static/js/: main.js
game/templates/: base.html
game/templates/game/: card_admin.html  card_detail.html  login.html
game/templates/game/emails/: welcome.txt
