[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sébastiaan <se_bastiaan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
