[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sébastiaan <se_bastiaan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
django-bootstrap4 = "^2.3.1"
black = "^20.8b1"
django-import-export = "^2.5.0"
django-libsass = "^0.8"
django-compressor = "^2.4"
django-debug-toolbar = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
